Refactors na implementação do serviço do banco inter de boletos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 banco.inter.url.rest=https://a6b8b4c8-036f-4a5e-9981-28ab9a0564d7.mock.pstmn.io/openbanking/v1/certificado
 banco.inter.numero.conta=183769058
+
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=getschooldb
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=getschool
+spring.data.mongodb.password=getschool123
